--- a/index.html
+++ b/index.html
@@ -2,25 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/angel.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>angel-email-flow</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Angel Email Flow</title>
+    <meta name="description" content="Angel investor outreach automation tool" />
+    <meta name="author" content="Rich Explorer" />
 
-    <meta property="og:title" content="angel-email-flow" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Angel Email Flow" />
+    <meta property="og:description" content="Streamline your angel investor outreach process" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@richexplorer" />
+    <meta name="twitter:image" content="/og-image.svg" />
   </head>
 
   <body>
     <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
